# squire

./: Cargo.toml  LICENSE  README.md  local.env
.github/: workflows
api/: Cargo.toml
api/src/: auth.rs  city.rs  error.rs  lib.rs  password.rs  user.rs
application/: Cargo.toml
application/src/: main.rs
db/: Cargo.toml
db/src/: city.rs  error.rs  lib.rs  user.rs
migration/: sqitch.conf  sqitch.plan
migration/deploy/: city.sql  squire.sql  user.sql
migration/revert/: city.sql  squire.sql  user.sql
migration/verify/: city.sql  squire.sql  user.sql
