[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"] }
db = { path = "../db" }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.1", features = ["serde"] }
