[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros"] }
db = { path = "../db" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["time_0_3"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
axum-test-helper = "0.1"
