[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros"] }
axum-auth = "0.4"
argon2 = "0.4"
db = { path = "../db" }
once_cell = "1.13"
rand = "0.8"
regex = "1.6"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["time_0_3"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
axum-test-helper = "0.1"
